<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<<<<<<< HEAD
<<<<<<< HEAD
  <modelVersion>4.0.0</modelVersion>

=======
>>>>>>> JsonUtils/master
  <parent>
    <groupId>com.muchq</groupId>
    <artifactId>Base</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

<<<<<<< HEAD
  <artifactId>LunarCat</artifactId>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/muchq/LunarCat/issues</url>
=======
  <modelVersion>4.0.0</modelVersion>
  <artifactId>JsonUtils</artifactId>
  <version>1.0-SNAPSHOT</version>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/muchq/JsonUtils/issues</url>
>>>>>>> JsonUtils/master
  </issueManagement>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <dependencies>
    <dependency>
<<<<<<< HEAD
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-jackson2-provider</artifactId>
    </dependency>
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-guice</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-webapp</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
    <dependency>
      <groupId>com.muchq</groupId>
      <artifactId>GuiceyHelpers</artifactId>
>>>>>>> JsonUtils/master
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
<<<<<<< HEAD
      <groupId>com.hubspot</groupId>
      <artifactId>HorizonApache</artifactId>
      <version>0.2.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

=======
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
>>>>>>> JsonUtils/master
=======
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.andyaylward</groupId>
  <artifactId>YoChat</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <muchq.mainClass>com.andyaylward.yochat.App</muchq.mainClass>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.30</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.2.3</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>4.1.54.Final</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <configuration>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>${muchq.mainClass}</mainClass>
            </transformer>
          </transformers>
          <createDependencyReducedPom>false</createDependencyReducedPom>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

>>>>>>> YoChat/main
</project>
